# ai_for_devs_training

challenges/ai_agents/: .gitignore  main.py  pyproject.toml
challenges/fine_tuning_challenge/: .gitignore  README.md  main.py  pyproject.toml
challenges/prompt_engineering/: first_question.md  fourth_question.md  second_question.md  third_question.md
challenges/rag_challenge/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  questions.py
challenges/rag_challenge/results/: naive_rag.txt  parent_rag.txt  rerank_rag.txt
challenges/rag_challenge/src/: main.py
challenges/rag_challenge/src/llm/: ollama_declarations.py
challenges/rag_challenge/src/llm/rag/: naive_rag.py  parent_rag.py  rerank_rag.py
challenges/rag_challenge/src/llm/vector_db/: define_naive_vector_db.py  define_parent_vector_db.py
classes/ai_agents/: .gitignore  main.py  pyproject.toml
classes/ai_agents/autogen/: pyproject.toml
classes/ai_agents/crewai/: pyproject.toml
classes/ai_agents/dataset/: wallet.csv
classes/ai_introduction/ai_applying/: ollamaAPI.py  requirements.txt
classes/ai_introduction/ai_creating/: aimodel.ipynb  requirements.txt
classes/ai_introduction/langflow/: docker-compose.yml
classes/developing_chatbots/: README.md  docker-compose.yml  requirements.txt
classes/developing_chatbots/src/: main.py
classes/optimizing_llms_with_fine_tuning/: .gitignore  dataset-preparation.py  fine-tuning-bert.py  pyproject.toml
classes/optimizing_llms_with_rag/advanced_rag/parent_rag/: .gitignore  README.md  requirements.txt
classes/optimizing_llms_with_rag/advanced_rag/parent_rag/src/: main.ipynb
classes/optimizing_llms_with_rag/advanced_rag/rag_compressor_rerank/: .gitignore  README.md  docker-compose.yml  main.ipynb  main.py  pyproject.toml
classes/optimizing_llms_with_rag/code_review_rag/: .gitignore  README.md  requirements.txt
classes/optimizing_llms_with_rag/code_review_rag/src/: main.ipynb
classes/optimizing_llms_with_rag/pdf_documents_rag/: .gitignore  README.md  requirements.txt
classes/optimizing_llms_with_rag/pdf_documents_rag/src/: main.ipynb
classes/optimizing_llms_with_rag/simple_rag_deploy/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
classes/optimizing_llms_with_rag/simple_rag_deploy/src/: main.py
