[project]
name = "ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=1.6.1",
    "crewai-tools>=1.6.1",
    "greenlet<3.3.0",
    "ipykernel>=7.1.0",
    "langchain-community>=0.4.1",
    "litellm>=1.80.7",
]
