[project]
name = "optimizing-llms-with-fine-tuning"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13.8"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "evaluate>=0.4.6",
    "huggingface-hub>=0.36.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "numpy>=2.3.5",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "transformers[torch]>=4.57.3",
]
