[project]
name = "ai-agents"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=1.6.1",
    "crewai-tools>=1.6.1",
    "ddgs>=9.9.3",
    "duckduckgo-search>=8.1.1",
    "greenlet<3.3.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "langchain-community>=0.4.1",
    "litellm>=1.80.7",
    "ollama>=0.6.1",
    "yfinance>=0.2.66",
]
