[project]
name = "simple-rag-deploy"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13.8"
dependencies = [
    "bs4>=0.0.2",
    "ipykernel>=7.1.0",
    "langchain>=1.0.5",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "notebook>=7.4.7",
    "ollama>=0.6.0",
    "pypdf>=6.2.0",
]
